# serializer version: 1
# name: TestCommandOutputs.test_check_output_snapshot
  '''
  Usage: polylogue doctor [OPTIONS]
    Health check with optional maintenance and cleanup previews.
  Options:
    -f, --format [json]             Output format
    -v, --verbose                   Show breakdown by provider
    --repair                        Run safe derived-data and database
                                    maintenance repairs
    --cleanup                       Run destructive archive cleanup for orphaned
                                    or empty persisted data
    --target [session_insights|action_event_read_model|dangling_fts|message_type_b
  ackfill|message_embeddings|wal_checkpoint|source_replay|orphaned_messages|orphan
  ed_content_blocks|empty_conversations|orphaned_attachments|orphaned_blobs|supers
  eded_raw_snapshots]
                                    Limit maintenance to named targets such as
                                    session_insights, action_event_read_model,
                                    dangling_fts, message_type_backfill,
                                    message_embeddings, wal_checkpoint,
                                    source_replay, orphaned_messages,
                                    orphaned_content_blocks,
                                    empty_conversations, orphaned_attachments,
                                    orphaned_blobs, or superseded_raw_snapshots
    --preview                       Preview maintenance without executing
                                    (requires --repair or --cleanup)
    --vacuum                        Reclaim unused space after maintenance
                                    (requires --repair or --cleanup)
    --deep                          Run SQLite integrity and expensive orphan
                                    scans (slow on large databases)
    --runtime                       Run environment and runtime verification
                                    checks
    --daemon                        Show daemon component status
    --blob, --blob-integrity        Verify blob store integrity (missing,
                                    orphaned, corrupt, and stale-lease blobs)
    --full                          Run full blob-integrity scan (requires
                                    --blob)
    --schemas                       Run raw-corpus schema verification (non-
                                    mutating)
    --proof                         Run durable artifact support proof
    --artifacts                     List durable artifact observations
    --cohorts                       Summarize durable artifact cohorts
    --schema-provider TEXT          Limit schema verification to DB provider
                                    name (repeatable)
    --artifact-provider TEXT        Limit artifact proof<PATH> to
                                    effective provider (repeatable)
    --artifact-status TEXT          Limit artifact listing<PATH> to support
                                    status (repeatable)
    --artifact-kind TEXT            Limit artifact listing<PATH> to artifact
                                    kind (repeatable)
    --artifact-limit INTEGER        Limit artifact proof<PATH> to N
                                    observation rows
    --artifact-offset INTEGER       Start offset for artifact
                                    proof<PATH>  [default: 0]
    --schema-samples TEXT           Validation samples per raw payload: positive
                                    integer or 'all'  [default: all]
    --schema-record-limit INTEGER   Limit schema verification to N raw records
                                    (for chunked runs)
    --schema-record-offset INTEGER  Start offset for chunked schema verification
                                    [default: 0]
    --schema-quarantine-malformed   Mark malformed raw payloads as failed
                                    validation during schema verification
                                    (mutates DB)
    -h, --help                      Show this message and exit.
  '''
# ---
# name: TestErrorOutput.test_invalid_option_error_output
  '''
  Usage: polylogue [OPTIONS] COMMAND [ARGS]...
  Try 'polylogue --help' for help.
  Error: No such option '--bogus'. Did you mean '--verbose'?
  Hint: `--bogus` is not a recognized option. Run `polylogue --help` for the full
  option list, or `polylogue "--bogus"` if you meant to search for that string.
  '''
# ---
# name: TestHelpOutput.test_help_output_snapshot
  '''
  Usage: polylogue [OPTIONS] COMMAND [ARGS]...
    Polylogue - AI conversation archive.
    Dispatch model (query-first):
        Any positional token that is NOT a registered subcommand or verb is
        treated as a search query against the archive. So `polylogue foo`
        searches for `foo` — it does NOT raise "unknown subcommand".
        Run `polylogue --help` to see the full subcommand list, or
        `polylogue --diagnose <args>` to have the parser explain how it
        routed your invocation.
    Query mode (default):
        polylogue "search terms"
        polylogue -p claude-ai --since "last week"
        polylogue --latest --output browser
    Verbs (actions on matched conversations):
        polylogue "error" -p claude-ai --since 2025-01 list
        polylogue --has thinking --sort tokens list --limit 10
        polylogue -p chatgpt count
        polylogue --provider codex stats --by provider
        polylogue --latest open
        polylogue "urgent" --tag review delete --dry-run
        polylogue list --format json
    Combined filters:
        polylogue --referenced-path README.md --action file_read list
        polylogue --action search --action file_edit list
        polylogue --action-sequence file_read,file_edit,shell list
        polylogue --action-text "pytest -q" list
        polylogue "pytest -q tests<PATH>" --retrieval-l
  ane actions --limit 5
        polylogue --action other stats --by tool --format json
        polylogue --provider claude-code --since 2026-01-01 stats --by repo --form
  at json
        polylogue --tool bash --exclude-tool read list
        polylogue --similar "sqlite locking bug in parser" --limit 5
    Modifiers (write operations):
        polylogue "urgent" --add-tag review
    See also:
        polylogue --help                  # this screen
        polylogue <subcommand> --help     # per-subcommand help
        polylogue --diagnose <args>       # explain parser decisions
  Options:
    --help-markdown                 Emit the full --help tree (root + every
                                    subcommand) as Markdown and exit.
    -i, --id TEXT                   Conversation ID (exact or prefix match)
    -c, --contains TEXT             FTS term (repeatable = AND)
    --exclude-text TEXT             Exclude FTS term
    --retrieval-lane LANE           Query lane: dialogue FTS, action text, or
                                    hybrid
    --lexical                       Force FTS-only search (overrides hybrid
                                    auto-elevation when embeddings are
                                    populated).
    --semantic                      Treat the query as a similarity prompt
                                    (vector-only; requires embeddings).
    -p, --provider TEXT             Include providers (comma = OR)
    --exclude-provider TEXT         Exclude providers
    -r, --repo TEXT                 Filter by repository name (comma = OR)
    -t, --tag TEXT                  Include tags (comma = OR, supports
                                    key:value)
    --exclude-tag TEXT              Exclude tags
    --title TEXT                    Title contains
    --referenced-path TEXT          Referenced file path contains substring
                                    (repeatable = AND)
    --cwd-prefix TEXT               Filter conversations whose recorded working
                                    directory starts with this prefix
    --action ACTION                 Require semantic action category (repeatable
                                    = AND)
    --exclude-action ACTION         Exclude semantic action category (repeatable
                                    = AND)
    --action-sequence TEXT          Require ordered semantic action subsequence
                                    (comma-separated)
    --action-text TEXT              Require text within normalized action
                                    evidence (repeatable = AND)
    --tool TEXT                     Require normalized tool name (repeatable =
                                    AND)
    --exclude-tool TEXT             Exclude normalized tool name (repeatable =
                                    AND)
    --similar TEXT                  Semantic similarity query (requires
                                    embeddings)
    --has TEXT                      Filter by content: thinking (reasoning),
                                    tools (calls), summary, attachments
    --has-tool-use                  Only conversations with tool use (SQL
                                    pushdown)
    --has-thinking                  Only conversations with thinking blocks (SQL
                                    pushdown)
    --has-paste                     Only conversations with pasted content (SQL
                                    pushdown)
    --typed-only                    Only conversations without pasted content
                                    (typed prose only)
    --min-messages INTEGER          Minimum message count
    --max-messages INTEGER          Maximum message count
    --min-words INTEGER             Minimum total word count
    --message-type TYPE             Filter by message content type (message,
                                    summary, tool_use, tool_result, thinking,
                                    context, protocol)
    --since-session TEXT            Show sessions in same cwd after this
                                    conversation ID
    --since TEXT                    After date (ISO, 'yesterday', 'last week')
    --until TEXT                    Before date
    -l, -n, --limit INTEGER         Max results
    --offset INTEGER                Offset for paginated results
    --cursor TEXT                   Opaque keyset cursor from a previous
                                    response's next_cursor. Stable across
                                    archive growth for ranked search (#1268).
    --latest                        Most recent (= --sort date --limit 1)
    --sort [date|tokens|messages|words|longest|random]
                                    Sort by field
    --reverse                       Reverse sort order
    --sample INTEGER                Random sample of N conversations
    -o, --output TEXT               Output destinations: browser, clipboard,
                                    stdout (comma-separated)
    -f, --format [markdown|json|ndjson|html|obsidian|org|yaml|plaintext|csv]
                                    Output format (for --latest, --stream, or
                                    verb output). `ndjson` emits one JSON
                                    document per line, streaming-friendly for
                                    shell pipelines and LLM tool-use harnesses.
    --transform [strip-tools|strip-thinking|strip-all]
                                    Remove content: strip-tools (tool calls),
                                    strip-thinking (reasoning), strip-all (both)
    --no-code-blocks                Exclude fenced and structured code blocks
                                    from output
    --no-tool-calls                 Exclude tool invocation records from output
    --no-tool-outputs               Exclude tool-result payloads from output
    --no-file-reads                 Exclude file-read payloads while keeping
                                    other tool output
    --prose-only                    Show only authored prose text
    --stream                        Stream output (low memory). Requires
                                    --latest or -i ID. Incompatible with
                                    --transform
    -d, --dialogue-only             Show only user<PATH> messages
    --message-role TEXT             Show only selected message roles (repeatable
                                    or comma-separated: user, assistant, system,
                                    tool, unknown)
    --set TEXT...                   Set metadata key value
    --add-tag TEXT                  Add tags (comma-separated)
    --plain                         Force non-interactive plain output
    -v, --verbose                   Verbose output
    --diagnose                      Explain CLI parser decisions on stderr
                                    before running. Useful when query-first
                                    dispatch surprises you: shows whether a bare
                                    token was routed to a subcommand or
                                    interpreted as a search query.
    --version                       Show the version and exit.
    -h, --help                      Show this message and exit.
  Commands:
    auth               Authenticate optional external services.
    backup             Create a timestamped backup of the archive database.
    bulk-export        Bulk export every matched conversation in one process.
    completions        Emit shell completion setup for polylogue.
    config             Show configuration paths and resolved settings.
    context-pack       Build a provenance-rich context pack for agent analysis.
    cost               Summarize conversation cost telemetry.
    count              Print count of matched conversations.
    dashboard          Open the local dashboard.
    delete             Delete matched conversations.
    diagnostics        Temporal session diagnostics
    doctor             Run archive health checks and repairs.
    embed              Enable, preflight, and backfill the embedding pipeline.
    export             Export conversations.
    facets
    feedback           Record learning corrections for derived insights.
    ingest             Import conversations from configured sources.
    init               Detect chat sources and write a starter polylogue.toml.
    insights           Rebuild and inspect derived session insights.
    list               List matched conversations.
    maintenance        Preview and run maintenance backfill operations.
    messages           List messages from matched conversations.
    neighbors          Show semantic neighbors for a conversation.
    open               Open matched conversation in the daemon web reader.
    raw                Show raw archive payloads for matched conversations.
    reset              Reset local archive state.
    resume             Resume from recent conversation context.
    resume-candidates  Rank resume candidates for the current context.
    schema             Inspect and audit provider schemas.
    select             Select one matched conversation and print a field.
    show               Show matched conversations with default full-content
                       output.
    stats              Show statistics for matched conversations.
    status             Show daemon and archive status.
    tags               Manage conversation tags.
    tutorial           Interactive first-run walk-through.
    user-state         Manage durable reader user state.
  '''
# ---
# name: TestTerminalDimensions.test_help_at_narrow_width
  '''
  Usage: polylogue [OPTIONS] COMMAND [ARGS]...
    Polylogue - AI conversation archive.
    Dispatch model (query-first):
        Any positional token that is NOT a registered subcomma
  nd or verb is
        treated as a search query against the archive. So `pol
  ylogue foo`
        searches for `foo` — it does NOT raise "unknown subcom
  mand".
        Run `polylogue --help` to see the full subcommand list
  , or
        `polylogue --diagnose <args>` to have the parser expla
  in how it
        routed your invocation.
    Query mode (default):
        polylogue "search terms"
        polylogue -p claude-ai --since "last week"
        polylogue --latest --output browser
    Verbs (actions on matched conversations):
        polylogue "error" -p claude-ai --since 2025-01 list
        polylogue --has thinking --sort tokens list --limit 10
        polylogue -p chatgpt count
        polylogue --provider codex stats --by provider
        polylogue --latest open
        polylogue "urgent" --tag review delete --dry-run
        polylogue list --format json
    Combined filters:
        polylogue --referenced-path README.md --action file_re
  ad list
        polylogue --action search --action file_edit list
        polylogue --action-sequence file_read,file_edit,shell
  list
        polylogue --action-text "pytest -q" list
        polylogue "pytest -q tests<PATH>
  ts.py" --retrieval-lane actions --limit 5
        polylogue --action other stats --by tool --format json
        polylogue --provider claude-code --since 2026-01-01 st
  ats --by repo --format json
        polylogue --tool bash --exclude-tool read list
        polylogue --similar "sqlite locking bug in parser" --l
  imit 5
    Modifiers (write operations):
        polylogue "urgent" --add-tag review
    See also:
        polylogue --help                  # this screen
        polylogue <subcommand> --help     # per-subcommand hel
  p
        polylogue --diagnose <args>       # explain parser dec
  isions
  Options:
    --help-markdown                 Emit the full --help tree
  (root + every
                                    subcommand) as Markdown an
  d exit.
    -i, --id TEXT                   Conversation ID (exact or
  prefix match)
    -c, --contains TEXT             FTS term (repeatable = AND
  )
    --exclude-text TEXT             Exclude FTS term
    --retrieval-lane LANE           Query lane: dialogue FTS,
  action text, or
                                    hybrid
    --lexical                       Force FTS-only search (ove
  rrides hybrid
                                    auto-elevation when embedd
  ings are
                                    populated).
    --semantic                      Treat the query as a simil
  arity prompt
                                    (vector-only; requires emb
  eddings).
    -p, --provider TEXT             Include providers (comma =
   OR)
    --exclude-provider TEXT         Exclude providers
    -r, --repo TEXT                 Filter by repository name
  (comma = OR)
    -t, --tag TEXT                  Include tags (comma = OR,
  supports
                                    key:value)
    --exclude-tag TEXT              Exclude tags
    --title TEXT                    Title contains
    --referenced-path TEXT          Referenced file path conta
  ins substring
                                    (repeatable = AND)
    --cwd-prefix TEXT               Filter conversations whose
   recorded working
                                    directory starts with this
   prefix
    --action ACTION                 Require semantic action ca
  tegory (repeatable
                                    = AND)
    --exclude-action ACTION         Exclude semantic action ca
  tegory (repeatable
                                    = AND)
    --action-sequence TEXT          Require ordered semantic a
  ction subsequence
                                    (comma-separated)
    --action-text TEXT              Require text within normal
  ized action
                                    evidence (repeatable = AND
  )
    --tool TEXT                     Require normalized tool na
  me (repeatable =
                                    AND)
    --exclude-tool TEXT             Exclude normalized tool na
  me (repeatable =
                                    AND)
    --similar TEXT                  Semantic similarity query
  (requires
                                    embeddings)
    --has TEXT                      Filter by content: thinkin
  g (reasoning),
                                    tools (calls), summary, at
  tachments
    --has-tool-use                  Only conversations with to
  ol use (SQL
                                    pushdown)
    --has-thinking                  Only conversations with th
  inking blocks (SQL
                                    pushdown)
    --has-paste                     Only conversations with pa
  sted content (SQL
                                    pushdown)
    --typed-only                    Only conversations without
   pasted content
                                    (typed prose only)
    --min-messages INTEGER          Minimum message count
    --max-messages INTEGER          Maximum message count
    --min-words INTEGER             Minimum total word count
    --message-type TYPE             Filter by message content
  type (message,
                                    summary, tool_use, tool_re
  sult, thinking,
                                    context, protocol)
    --since-session TEXT            Show sessions in same cwd
  after this
                                    conversation ID
    --since TEXT                    After date (ISO, 'yesterda
  y', 'last week')
    --until TEXT                    Before date
    -l, -n, --limit INTEGER         Max results
    --offset INTEGER                Offset for paginated resul
  ts
    --cursor TEXT                   Opaque keyset cursor from
  a previous
                                    response's next_cursor. St
  able across
                                    archive growth for ranked
  search (#1268).
    --latest                        Most recent (= --sort date
   --limit 1)
    --sort [date|tokens|messages|words|longest|random]
                                    Sort by field
    --reverse                       Reverse sort order
    --sample INTEGER                Random sample of N convers
  ations
    -o, --output TEXT               Output destinations: brows
  er, clipboard,
                                    stdout (comma-separated)
    -f, --format [markdown|json|ndjson|html|obsidian|org|yaml|
  plaintext|csv]
                                    Output format (for --lates
  t, --stream, or
                                    verb output). `ndjson` emi
  ts one JSON
                                    document per line, streami
  ng-friendly for
                                    shell pipelines and LLM to
  ol-use harnesses.
    --transform [strip-tools|strip-thinking|strip-all]
                                    Remove content: strip-tool
  s (tool calls),
                                    strip-thinking (reasoning)
  , strip-all (both)
    --no-code-blocks                Exclude fenced and structu
  red code blocks
                                    from output
    --no-tool-calls                 Exclude tool invocation re
  cords from output
    --no-tool-outputs               Exclude tool-result payloa
  ds from output
    --no-file-reads                 Exclude file-read payloads
   while keeping
                                    other tool output
    --prose-only                    Show only authored prose t
  ext
    --stream                        Stream output (low memory)
  . Requires
                                    --latest or -i ID. Incompa
  tible with
                                    --transform
    -d, --dialogue-only             Show only user<PATH> m
  essages
    --message-role TEXT             Show only selected message
   roles (repeatable
                                    or comma-separated: user,
  assistant, system,
                                    tool, unknown)
    --set TEXT...                   Set metadata key value
    --add-tag TEXT                  Add tags (comma-separated)
    --plain                         Force non-interactive plai
  n output
    -v, --verbose                   Verbose output
    --diagnose                      Explain CLI parser decisio
  ns on stderr
                                    before running. Useful whe
  n query-first
                                    dispatch surprises you: sh
  ows whether a bare
                                    token was routed to a subc
  ommand or
                                    interpreted as a search qu
  ery.
    --version                       Show the version and exit.
    -h, --help                      Show this message and exit
  .
  Commands:
    auth               Authenticate optional external services
  .
    backup             Create a timestamped backup of the arch
  ive database.
    bulk-export        Bulk export every matched conversation
  in one process.
    completions        Emit shell completion setup for polylog
  ue.
    config             Show configuration paths and resolved s
  ettings.
    context-pack       Build a provenance-rich context pack fo
  r agent analysis.
    cost               Summarize conversation cost telemetry.
    count              Print count of matched conversations.
    dashboard          Open the local dashboard.
    delete             Delete matched conversations.
    diagnostics        Temporal session diagnostics
    doctor             Run archive health checks and repairs.
    embed              Enable, preflight, and backfill the emb
  edding pipeline.
    export             Export conversations.
    facets
    feedback           Record learning corrections for derived
   insights.
    ingest             Import conversations from configured so
  urces.
    init               Detect chat sources and write a starter
   polylogue.toml.
    insights           Rebuild and inspect derived session ins
  ights.
    list               List matched conversations.
    maintenance        Preview and run maintenance backfill op
  erations.
    messages           List messages from matched conversation
  s.
    neighbors          Show semantic neighbors for a conversat
  ion.
    open               Open matched conversation in the daemon
   web reader.
    raw                Show raw archive payloads for matched c
  onversations.
    reset              Reset local archive state.
    resume             Resume from recent conversation context
  .
    resume-candidates  Rank resume candidates for the current
  context.
    schema             Inspect and audit provider schemas.
    select             Select one matched conversation and pri
  nt a field.
    show               Show matched conversations with default
   full-content
                       output.
    stats              Show statistics for matched conversatio
  ns.
    status             Show daemon and archive status.
    tags               Manage conversation tags.
    tutorial           Interactive first-run walk-through.
    user-state         Manage durable reader user state.
  '''
# ---
# name: TestTerminalDimensions.test_help_at_wide_width
  '''
  Usage: polylogue [OPTIONS] COMMAND [ARGS]...
    Polylogue - AI conversation archive.
    Dispatch model (query-first):
        Any positional token that is NOT a registered subcommand or verb is
        treated as a search query against the archive. So `polylogue foo`
        searches for `foo` — it does NOT raise "unknown subcommand".
        Run `polylogue --help` to see the full subcommand list, or
        `polylogue --diagnose <args>` to have the parser explain how it
        routed your invocation.
    Query mode (default):
        polylogue "search terms"
        polylogue -p claude-ai --since "last week"
        polylogue --latest --output browser
    Verbs (actions on matched conversations):
        polylogue "error" -p claude-ai --since 2025-01 list
        polylogue --has thinking --sort tokens list --limit 10
        polylogue -p chatgpt count
        polylogue --provider codex stats --by provider
        polylogue --latest open
        polylogue "urgent" --tag review delete --dry-run
        polylogue list --format json
    Combined filters:
        polylogue --referenced-path README.md --action file_read list
        polylogue --action search --action file_edit list
        polylogue --action-sequence file_read,file_edit,shell list
        polylogue --action-text "pytest -q" list
        polylogue "pytest -q tests<PATH>" --retrieval-lane actions --limit 5
        polylogue --action other stats --by tool --format json
        polylogue --provider claude-code --since 2026-01-01 stats --by repo --format json
        polylogue --tool bash --exclude-tool read list
        polylogue --similar "sqlite locking bug in parser" --limit 5
    Modifiers (write operations):
        polylogue "urgent" --add-tag review
    See also:
        polylogue --help                  # this screen
        polylogue <subcommand> --help     # per-subcommand help
        polylogue --diagnose <args>       # explain parser decisions
  Options:
    --help-markdown                 Emit the full --help tree (root + every
                                    subcommand) as Markdown and exit.
    -i, --id TEXT                   Conversation ID (exact or prefix match)
    -c, --contains TEXT             FTS term (repeatable = AND)
    --exclude-text TEXT             Exclude FTS term
    --retrieval-lane LANE           Query lane: dialogue FTS, action text, or
                                    hybrid
    --lexical                       Force FTS-only search (overrides hybrid
                                    auto-elevation when embeddings are
                                    populated).
    --semantic                      Treat the query as a similarity prompt
                                    (vector-only; requires embeddings).
    -p, --provider TEXT             Include providers (comma = OR)
    --exclude-provider TEXT         Exclude providers
    -r, --repo TEXT                 Filter by repository name (comma = OR)
    -t, --tag TEXT                  Include tags (comma = OR, supports
                                    key:value)
    --exclude-tag TEXT              Exclude tags
    --title TEXT                    Title contains
    --referenced-path TEXT          Referenced file path contains substring
                                    (repeatable = AND)
    --cwd-prefix TEXT               Filter conversations whose recorded working
                                    directory starts with this prefix
    --action ACTION                 Require semantic action category (repeatable
                                    = AND)
    --exclude-action ACTION         Exclude semantic action category (repeatable
                                    = AND)
    --action-sequence TEXT          Require ordered semantic action subsequence
                                    (comma-separated)
    --action-text TEXT              Require text within normalized action
                                    evidence (repeatable = AND)
    --tool TEXT                     Require normalized tool name (repeatable =
                                    AND)
    --exclude-tool TEXT             Exclude normalized tool name (repeatable =
                                    AND)
    --similar TEXT                  Semantic similarity query (requires
                                    embeddings)
    --has TEXT                      Filter by content: thinking (reasoning),
                                    tools (calls), summary, attachments
    --has-tool-use                  Only conversations with tool use (SQL
                                    pushdown)
    --has-thinking                  Only conversations with thinking blocks (SQL
                                    pushdown)
    --has-paste                     Only conversations with pasted content (SQL
                                    pushdown)
    --typed-only                    Only conversations without pasted content
                                    (typed prose only)
    --min-messages INTEGER          Minimum message count
    --max-messages INTEGER          Maximum message count
    --min-words INTEGER             Minimum total word count
    --message-type TYPE             Filter by message content type (message,
                                    summary, tool_use, tool_result, thinking,
                                    context, protocol)
    --since-session TEXT            Show sessions in same cwd after this
                                    conversation ID
    --since TEXT                    After date (ISO, 'yesterday', 'last week')
    --until TEXT                    Before date
    -l, -n, --limit INTEGER         Max results
    --offset INTEGER                Offset for paginated results
    --cursor TEXT                   Opaque keyset cursor from a previous
                                    response's next_cursor. Stable across
                                    archive growth for ranked search (#1268).
    --latest                        Most recent (= --sort date --limit 1)
    --sort [date|tokens|messages|words|longest|random]
                                    Sort by field
    --reverse                       Reverse sort order
    --sample INTEGER                Random sample of N conversations
    -o, --output TEXT               Output destinations: browser, clipboard,
                                    stdout (comma-separated)
    -f, --format [markdown|json|ndjson|html|obsidian|org|yaml|plaintext|csv]
                                    Output format (for --latest, --stream, or
                                    verb output). `ndjson` emits one JSON
                                    document per line, streaming-friendly for
                                    shell pipelines and LLM tool-use harnesses.
    --transform [strip-tools|strip-thinking|strip-all]
                                    Remove content: strip-tools (tool calls),
                                    strip-thinking (reasoning), strip-all (both)
    --no-code-blocks                Exclude fenced and structured code blocks
                                    from output
    --no-tool-calls                 Exclude tool invocation records from output
    --no-tool-outputs               Exclude tool-result payloads from output
    --no-file-reads                 Exclude file-read payloads while keeping
                                    other tool output
    --prose-only                    Show only authored prose text
    --stream                        Stream output (low memory). Requires
                                    --latest or -i ID. Incompatible with
                                    --transform
    -d, --dialogue-only             Show only user<PATH> messages
    --message-role TEXT             Show only selected message roles (repeatable
                                    or comma-separated: user, assistant, system,
                                    tool, unknown)
    --set TEXT...                   Set metadata key value
    --add-tag TEXT                  Add tags (comma-separated)
    --plain                         Force non-interactive plain output
    -v, --verbose                   Verbose output
    --diagnose                      Explain CLI parser decisions on stderr
                                    before running. Useful when query-first
                                    dispatch surprises you: shows whether a bare
                                    token was routed to a subcommand or
                                    interpreted as a search query.
    --version                       Show the version and exit.
    -h, --help                      Show this message and exit.
  Commands:
    auth               Authenticate optional external services.
    backup             Create a timestamped backup of the archive database.
    bulk-export        Bulk export every matched conversation in one process.
    completions        Emit shell completion setup for polylogue.
    config             Show configuration paths and resolved settings.
    context-pack       Build a provenance-rich context pack for agent analysis.
    cost               Summarize conversation cost telemetry.
    count              Print count of matched conversations.
    dashboard          Open the local dashboard.
    delete             Delete matched conversations.
    diagnostics        Temporal session diagnostics
    doctor             Run archive health checks and repairs.
    embed              Enable, preflight, and backfill the embedding pipeline.
    export             Export conversations.
    facets
    feedback           Record learning corrections for derived insights.
    ingest             Import conversations from configured sources.
    init               Detect chat sources and write a starter polylogue.toml.
    insights           Rebuild and inspect derived session insights.
    list               List matched conversations.
    maintenance        Preview and run maintenance backfill operations.
    messages           List messages from matched conversations.
    neighbors          Show semantic neighbors for a conversation.
    open               Open matched conversation in the daemon web reader.
    raw                Show raw archive payloads for matched conversations.
    reset              Reset local archive state.
    resume             Resume from recent conversation context.
    resume-candidates  Rank resume candidates for the current context.
    schema             Inspect and audit provider schemas.
    select             Select one matched conversation and print a field.
    show               Show matched conversations with default full-content
                       output.
    stats              Show statistics for matched conversations.
    status             Show daemon and archive status.
    tags               Manage conversation tags.
    tutorial           Interactive first-run walk-through.
    user-state         Manage durable reader user state.
  '''
# ---
